--- a/_content/BL-1001.md
+++ b/_content/BL-1001.md
@@ -1,7 +1,7 @@
 ---
 Id: 1001
 Title: Understanding Git and Github
-Author: Soumyajit
+Author: Aryanstha
 Tags: Git Github
 Topic: Git
 Abstract: Understanding the  difference between Git and Github with examples and their main use cases or how they are helpful for the developers.
