--- a/_content/BL-1002.md
+++ b/_content/BL-1002.md
@@ -1,7 +1,7 @@
 ---
 Id: 1002
 Title: Client Vs Server Side Rendering
-Author: Soumyajit
+Author: Aryanstha
 Tags: React Next
 Topic: React
 Abstract: Difference between different types of rendering techniques and advantage of Next.js over React.js.
