--- a/_content/BL-1003.md
+++ b/_content/BL-1003.md
@@ -1,7 +1,7 @@
 ---
 Id: 1003
 Title: Core Concept You Need to Know About React
-Author: Soumyajit
+Author: Aryanstha
 Tags: React Interview
 Topic: React
 Abstract: Learning some of the fundamental concepts of React.js and top questions asked in react interview.
