--- a/_content/BL-1004.md
+++ b/_content/BL-1004.md
@@ -1,7 +1,7 @@
 ---
 Id: 1004
 Title: Rough
-Author: Soumyajit
+Author: Aryanstha
 Tags: Interview Javascript
 Topic: Javascript
 Abstract: Learning some of the fundamental concepts of Javascript and top questions asked in javascript interview.
