--- a/_content/BL-1005.md
+++ b/_content/BL-1005.md
@@ -1,7 +1,7 @@
 ---
 Id: 1005
 Title: Understanding Promises in Javasript
-Author: Soumyajit
+Author: Aryanstha
 Tags: Javascript Interview
 Topic: Javascript
 Abstract: Learning about Promises in Javascript
