--- a/_content/BL-1006.md
+++ b/_content/BL-1006.md
@@ -1,7 +1,7 @@
 ---
 Id: 1006
 Title: Javascript Concepts - Part1
-Author: Soumyajit
+Author: Aryanstha
 Tags: Javascript Interview
 Topic: Javascript
 Abstract: Learning some of the fundamental concepts of Javascript and questions asked in javascript interview.
