--- a/_content/BL-1008.md
+++ b/_content/BL-1008.md
@@ -1,7 +1,7 @@
 ---
 Id: 1008
 Title: Javascript Event Loop:Explained
-Author: Soumyajit
+Author: Aryanstha
 Tags: Javascript Interview
 Topic: Javascript
 Abstract: Understanding how javascript works under the hood, how it executes our asynchronous javascript code and event loop
