--- a/_content/BL-1009.md
+++ b/_content/BL-1009.md
@@ -1,7 +1,7 @@
 ---
 Id: 1009
 Title: Prototype and Prototypical Inheritance
-Author: Soumyajit
+Author: Aryanstha
 Tags: Javascript Interview
 Topic: Javascript
 Abstract: Understanding And Using Prototype and Prototypical Inheritance in JavaScript
