--- a/_content/BL-1010.md
+++ b/_content/BL-1010.md
@@ -1,7 +1,7 @@
 ---
 Id: 1010
 Title: React Lifecycle Methods
-Author: Soumyajit
+Author: Aryanstha
 Tags: React Interview
 Topic: React
 Abstract: Lifecycle methods are series of events that happen throughout the birth, growth, and death of a React component.
