--- a/_content/BL-1012.md
+++ b/_content/BL-1012.md
@@ -3,9 +3,9 @@ Id: 1012
 Title: Creating a web server with Golang
 Author: SerinaPokharel
 Tags: Go
-Topic: Web server with Golang
+Topic: Go
 Abstract: Learning some of the fundamental to create web server with GO.
-HeaderImage: /BL-1012/Go.jpg
+HeaderImage: /BL-1012/go.jpg
 isPublished: true
 ---
 
