--- a/_content/BL-1012.md
+++ b/_content/BL-1012.md
@@ -10,7 +10,7 @@ isPublished: true
 ---
 
 ## GO Language
-![GO](/BL-1012/logo.png)
+![GO](/public/BL-1012/logo.png)
 
 In this tutorial, we will explore how to utilize Go's built-in HTTP package to create a simple and efficient web server. The server we will create will be capable of handling GET requests and serving static files, effectively acting as a file server. Additionally, we will demonstrate how to make the server respond to a POST request, which can be useful for processing data from a form submission, such as a contact form.
 
