--- a/_content/BL-1012.md
+++ b/_content/BL-1012.md
@@ -9,7 +9,7 @@ HeaderImage: /BL-1012/go.jpg
 isPublished: true
 ---
 
-## GO Language
+## Introduction {#Introduction}
 ![GO](/public/BL-1012/logo.png)
 
 In this tutorial, we will explore how to utilize Go's built-in HTTP package to create a simple and efficient web server. The server we will create will be capable of handling GET requests and serving static files, effectively acting as a file server. Additionally, we will demonstrate how to make the server respond to a POST request, which can be useful for processing data from a form submission, such as a contact form.
@@ -58,7 +58,7 @@ If you followed along with the setup, you should see the following output in you
 Starting server at port 3000
 ```
 
-## Starting a web server with GET routes{#tarting-a-web-server-with-GET-routes}
+## Starting a web server with GET routes{#starting-a-web-server-with-GET-routes}
 
 At this point, we'll build a web server that can reply to incoming GET requests and is truly accessible on port `3000`.
 
